Amended footer to show class

--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
                     anywhere you like!
                 </p>
                 <div class="pricing-area">
-                    <img class="note-img" src="./images/icon-music.svg" alt="">
-                    <p class="annual-plan">Annual Plan</p>
-                    <p class="price">£59.99/year</p>
-                    <a class="hyperlink" href="">Change</a>
+                    <div class="note">
+                        <img class="note-img" src="./images/icon-music.svg" alt="">
+                    </div>
+                    <div class="pricing">
+                        <p class="annual-plan">Annual Plan</p>
+                        <p class="price">£59.99/year</p>
+                    </div>
+                    <div class="link">
+                        <a class="hyperlink" href="">Change</a>
+                    </div>
                 </div>
                 <button class="btn">
                     Proceed to Payment
