--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                 <button class="btn">
                     Proceed to Payment
                 </button>
-                <p class="cancel-order">Cancel Order</p>
+                <button id="cancel-order-btn">
+                    Cancel Order
+                </button>
+
             </div>
         </div>
     </main>
